🔧 Vercel SPA 라우팅 설정 추가
🚀 배포 환경 SPA 라우팅 지원:
- vercel.json에 rewrites 규칙 추가
- /search, /favorites, /linkcreate, /settings 경로를 index.html로 리다이렉트
- 정적 파일(이미지, CSS, JS)은 제외하고 모든 경로를 SPA로 처리

🔧 Vercel 설정:
- 특정 SPA 경로들을 명시적으로 index.html로 리라이트
- 정규식을 사용한 포괄적 SPA 라우팅 규칙 추가
- 기존 보안 헤더 설정 유지

✅ 이제 배포된 사이트에서도 /search, /linkcreate, /settings 등의 깔끔한 URL이 작동합니다.

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,28 @@
       "use": "@vercel/static"
     }
   ],
+  "rewrites": [
+    {
+      "source": "/search",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/favorites",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/linkcreate",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/settings",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/((?!api|_next|_static|favicon.ico|.*\\.).*)$",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
