🔄 설정을 모달에서 별도 페이지로 변경
🔧 구조 변경:
- 설정 기능을 모달에서 별도 페이지(settings.html)로 변경
- index.html에서 설정 모달 HTML 제거 (약 230줄 삭제)
- showSettingsPage() 함수를 settings.html로 리다이렉트하도록 수정

🚀 라우팅 개선:
- SPA 라우터에서 /settings 경로 제거
- Vercel 설정에서 /settings → settings.html로 직접 라우팅
- 설정은 별도 페이지로, 나머지는 SPA로 유지

💾 파일 변경:
- index.html: 설정 모달 HTML 제거
- script.js: showSettingsPage() 단순화, 라우터에서 /settings 제거
- vercel.json: /settings 경로를 settings.html로 리다이렉트

💾 버전 업데이트:
- JavaScript 버전을 v=2.4로 업데이트

✅ 이제 설정 탭을 클릭하면 별도 페이지(settings.html)로 이동합니다.

--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
     },
     {
       "source": "/settings",
-      "destination": "/index.html"
+      "destination": "/settings.html"
     },
     {
       "source": "/((?!api|_next|_static|favicon.ico|.*\\.).*)$",
