🔧 Vercel 정적 파일 라우팅 수정 - settings.html과 admin.html 직접 접근 허용

--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
       "destination": "/settings.html"
     },
     {
-      "source": "/((?!api|_next|_static|favicon.ico|.*\\.).*)$",
+      "source": "/((?!api|_next|_static|favicon.ico|settings.html|admin.html|.*\\.).*)$",
       "destination": "/index.html"
     }
   ],
