💥 핵폭탄 해결책 - 파일 완전 삭제 후 재생성으로 Vercel 캐시 파괴

--- a/vercel.json
+++ b/vercel.json
@@ -8,28 +8,24 @@
   ],
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/index-new.html"
-    },
-    {
       "source": "/search",
-      "destination": "/index-new.html"
+      "destination": "/index.html"
     },
     {
       "source": "/favorites",
-      "destination": "/index-new.html"
+      "destination": "/index.html"
     },
     {
       "source": "/linkcreate",
-      "destination": "/index-new.html"
+      "destination": "/index.html"
     },
     {
       "source": "/settings",
       "destination": "/settings.html"
     },
     {
-      "source": "/((?!api|_next|_static|favicon.ico|settings.html|admin.html|index-new.html|.*\\.).*)$",
-      "destination": "/index-new.html"
+      "source": "/((?!api|_next|_static|favicon.ico|settings.html|admin.html|.*\\.).*)$",
+      "destination": "/index.html"
     }
   ],
   "headers": [
