🚀 핵무기 옵션 - 모든 파일명 완전 변경으로 Vercel 캐시 완전 우회

--- a/vercel.json
+++ b/vercel.json
@@ -13,24 +13,28 @@
   ],
   "rewrites": [
     {
+      "source": "/",
+      "destination": "/main.html"
+    },
+    {
       "source": "/search",
-      "destination": "/index.html"
+      "destination": "/main.html"
     },
     {
       "source": "/favorites",
-      "destination": "/index.html"
+      "destination": "/main.html"
     },
     {
       "source": "/linkcreate",
-      "destination": "/index.html"
+      "destination": "/main.html"
     },
     {
       "source": "/settings",
       "destination": "/settings.html"
     },
     {
-      "source": "/((?!api|_next|_static|favicon.ico|settings.html|admin.html|.*\\.).*)$",
-      "destination": "/index.html"
+      "source": "/((?!api|_next|_static|favicon.ico|settings.html|admin.html|main.html|.*\\.).*)$",
+      "destination": "/main.html"
     }
   ],
   "headers": [
